Addition of simple hand controllers

--- a/simple_hand_follower_controller/etc/SimpleHandFollowerController.in.yaml
+++ b/simple_hand_follower_controller/etc/SimpleHandFollowerController.in.yaml
@@ -3,4 +3,8 @@
   "MainRobot": "JVRC1",
   "Enabled": ["SimpleHandFollowerController", "CoM"],
   "Timestep": 0.005,
+  "type": "body6d",
+  "body": "l_wrist",
+  "orientation": [0.71, 0, 0.71, 0],
+  "position": [0.4, 0.4, 1.0]
 }
