Updated gripper pose

--- a/simple_hand_follower_controller/etc/SimpleHandFollowerController.in.yaml
+++ b/simple_hand_follower_controller/etc/SimpleHandFollowerController.in.yaml
@@ -1,6 +1,6 @@
 ---
 {
   "MainRobot": "JVRC1",
-  "Enabled": ["SimpleHandFollowerController", "CoM"],
+  "Enabled": ["SimpleHandFollowerController"],
   "Timestep": 0.005,
 }
